argocd/backstage/clusters/spotlight-demo/apps/test-app/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    backstage.io/kubernetes-id: test-app
---
