argocd/backstage/clusters/spotlight-demo/apps/test-app/app/gloo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app
  namespace: test
  labels:
    backstage.io/kubernetes-id: test-app
spec:
  parentRefs:
  - name: http-gateway
    namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: test-app
      port: 80
